--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "yidreams",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
@@ -33,5 +31,10 @@
   "bugs": {
     "url": "https://github.com/lsiler23/yidreams/issues"
   },
-  "homepage": "https://github.com/lsiler23/yidreams#readme"
+  "homepage": "https://github.com/lsiler23/yidreams#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6"
+  }
 }
