--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "yidreams",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.18.0",
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
+    "css-loader": "^2.1.1",
+    "dateformat": "^3.0.3",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
@@ -34,9 +40,5 @@
     "url": "https://github.com/lsiler23/yidreams/issues"
   },
   "homepage": "https://github.com/lsiler23/yidreams#readme",
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6"
-  }
+  "devDependencies": {}
 }
